<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/basic_view"
		android:background="@color/solid_white">

		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content">


			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:background="@color/solid_white"
				android:layout_marginTop="30dip" android:layout_marginRight="3dip">
				<EditText android:id="@+id/basic_search_terms"  
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:focusable="true" android:layout_margin="3dip" 
					android:hint="@string/search_term_hint" android:singleLine="true" />
				
			</LinearLayout>
			<RadioGroup android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_margin="3dip">

				<RadioButton android:id="@+id/wiz_orterm"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/wiz_orterms_radio" android:textColor="@color/solid_black"
					android:layout_margin="2dip" android:checked="true" />

				<RadioButton android:id="@+id/wiz_andterm"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/wiz_andterms_radio" android:layout_margin="2dip"
					android:textColor="@color/solid_black" />
			</RadioGroup>
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:background="@color/solid_white" >
				<EditText android:id="@+id/tweet_msg"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:focusable="true" android:layout_margin="3dip" android:maxLength="140" 
					android:lines="4" android:hint="@string/tweet_prompt"
					android:singleLine="false" />
				
		    </LinearLayout>	
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:background="@color/solid_white"
				android:layout_marginTop="1dip" >
				<ImageButton android:id="@+id/basic_search_button"
					android:layout_width="50dip" android:layout_height="50dip"
					android:src="@android:drawable/ic_menu_search"
					android:layout_marginTop="5dip" android:layout_marginLeft="5dip" />
				<Button android:id="@+id/tweet_auth"
					android:layout_width="75dip" android:layout_height="50dip"
					android:text="@string/tweet_action"  android:layout_marginLeft="10dip" 
					android:layout_marginTop="5dip"  />
				<ImageButton android:id="@+id/menu"
					android:layout_width="50dip" android:layout_height="50dip"
					android:src="@android:drawable/ic_menu_more"
					android:layout_marginLeft="10dip" android:layout_marginTop="5dip" />
				
				<ImageButton android:id="@+id/list_button"
					android:layout_width="50dip" android:layout_height="50dip"
					android:src="@android:drawable/ic_menu_recent_history"
					android:layout_marginTop="5dip" android:layout_marginLeft="70dip" />
			</LinearLayout>

		</LinearLayout>

	</ScrollView>


	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/basic_advanced"
		android:background="@color/solid_white" >

		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content" >
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:textColor="@color/solid_black"
				android:layout_margin="5dip" android:text="@string/and_terms_label"
				android:textSize="18sp" />
			<EditText android:id="@+id/and_search_terms"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:focusable="true" android:layout_margin="5dip"
				android:hint="@string/and_terms_hint" android:singleLine="true" />
			<TextView android:layout_width="255px"
				android:layout_height="wrap_content" android:textColor="@color/solid_black"
				android:layout_margin="5dip" android:text="@string/or_terms_label"
				android:textSize="18sp" />
			<EditText android:id="@+id/or_search_terms"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:focusable="true" android:layout_margin="5dip"
				android:hint="@string/or_terms_hint" android:singleLine="true" />

			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:textColor="@color/solid_black"
				android:layout_margin="5dip" android:text="@string/exc_terms_label"
				android:textSize="18sp" />
			<EditText android:id="@+id/exc_search_terms"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:focusable="true" android:layout_margin="5dip"
				android:hint="@string/exc_terms_hint" android:singleLine="true" />
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content" 
				android:layout_marginTop="35dip" android:layout_marginBottom="0dip" >
				<ImageButton android:id="@+id/adv_search_button"
					android:layout_width="50dip" android:layout_height="50dip"
					android:src="@android:drawable/ic_menu_search"
					android:layout_marginLeft="5dip" />

				<ImageButton android:id="@+id/adv_more_button"
					android:layout_width="50dip" android:layout_height="50dip"
					android:src="@android:drawable/ic_menu_more"
					android:layout_marginLeft="75dip" android:layout_marginTop="0dip" />
			
				<ImageButton android:id="@+id/adv_list_button"
					android:layout_width="50dip" android:layout_height="50dip"
					android:src="@android:drawable/ic_menu_recent_history"
					android:layout_marginTop="0dip" android:layout_marginLeft="80dip" />
			</LinearLayout>
		</LinearLayout>

	</ScrollView>
	 
</FrameLayout>
